# monitorator

./: .gitignore  CLAUDE.md  pyproject.toml
hooks/: emit_event.py
src/monitorator/: __init__.py  __main__.py  cli.py  installer.py  merger.py  models.py  notifier.py  project_metadata.py  scanner.py  session_prompt.py  state_store.py
src/monitorator/tui/: app.py  column_header.py  detail_panel.py  formatting.py  header_banner.py  session_row.py  session_table.py  status_bar.py  styles.tcss
tests/: conftest.py  test_column_header.py  test_emit_event.py  test_formatting.py  test_header_banner.py  test_installer.py  test_merger.py  test_models.py  test_notifier.py  test_project_metadata.py  test_scanner.py  test_session_card.py  test_session_prompt.py  test_session_row.py  test_state_store.py  test_tui.py
