[project]
name = "monitorator"
version = "0.1.0"
description = "TUI dashboard to monitor all active Claude Code sessions"
requires-python = ">=3.11"
dependencies = ["textual>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "textual-dev>=1.0.0"]

[project.scripts]
monitorator = "monitorator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
